k8s/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: dev       # override with -n flag or kustomize overlay
  labels:
    app.kubernetes.io/managed-by: gitlab-ci
